--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="#services">产品相关</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#portfolio">学习内容</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#services">开发宗旨</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#portfolio">产品相关</a></li>
                         <li class="nav-item"><a class="nav-link" href="#about">团队介绍</a></li>
                         <li class="nav-item"><a class="nav-link" href="#team">未来方向</a></li>
                     </ul>
@@ -49,8 +49,8 @@
         <section class="page-section" id="services">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">我们为什么开发NOKEYS</h2>
-                    <h3 class="section-subheading text-muted">Why we make NOKEYS?</h3>
+                    <h2 class="section-heading text-uppercase">NOKEYS有什么特点</h2>
+                    <h3 class="section-subheading text-muted">What characters does NOKEYS have?</h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
@@ -59,23 +59,23 @@
                             <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">商业价值</h4>
-                        <p class="text-muted">树莓派本就适合初学编程者的学习，若将功能更多地改进，可以作为二次创作产品开辟新的市场</p>
+                        <p class="text-muted">大学生忘记携带寝室门钥匙的状况频发，开发开锁装置是必要的</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">编程学习</h4>
-                        <p class="text-muted">人们可以通过树莓派开发出各种各样的新玩法</p>
+                        <h4 class="my-3">易于操作</h4>
+                        <p class="text-muted">便携性安装，无需大改门的构造</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">安全保障</h4>
-                        <p class="text-muted">具有专门烧录系统的官方网站，镜像文件更安全</p>
+                        <h4 class="my-3">多种解锁方式</h4>
+                        <p class="text-muted">支持指纹，密码，蓝牙解锁</p>
                     </div>
                 </div>
             </div>
@@ -84,7 +84,7 @@
         <section class="page-section bg-light" id="portfolio">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">我们需要接触什么</h2>
+                    <h2 class="section-heading text-uppercase">产品相关</h2>
                     <h3 class="section-subheading text-muted">Something About Our Products</h3>
                 </div>
                 <div class="row">
@@ -98,8 +98,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/1.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">树莓派 4B</div>
-                                <div class="portfolio-caption-subheading text-muted">Illustration</div>
+                                <div class="portfolio-caption-heading">STM32F407ZGT6开发板</div>
+                                <div class="portfolio-caption-subheading text-muted">STM32</div>
                             </div>
                         </div>
                     </div>
@@ -113,8 +113,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/2.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Python语言</div>
-                                <div class="portfolio-caption-subheading text-muted">Graphic Design</div>
+                                <div class="portfolio-caption-heading">AS608指纹识别模块</div>
+                                <div class="portfolio-caption-subheading text-muted">AS608</div>
                             </div>
                         </div>
                     </div>
@@ -128,7 +128,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/3.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">C++语言</div>
+                                <div class="portfolio-caption-heading">HC-06蓝牙模块</div>
                                 <div class="portfolio-caption-subheading text-muted">Identity</div>
                             </div>
                         </div>
@@ -143,7 +143,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/4.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">神经网络</div>
+                                <div class="portfolio-caption-heading">矩阵按键模块</div>
                                 <div class="portfolio-caption-subheading text-muted">Branding</div>
                             </div>
                         </div>
@@ -158,7 +158,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/5.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Southwest</div>
+                                <div class="portfolio-caption-heading">OLED显示模块</div>
                                 <div class="portfolio-caption-subheading text-muted">Website Design</div>
                             </div>
                         </div>
@@ -173,7 +173,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/6.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Window</div>
+                                <div class="portfolio-caption-heading">步进电机驱动模块</div>
                                 <div class="portfolio-caption-subheading text-muted">Photography</div>
                             </div>
                         </div>
@@ -219,8 +219,8 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>VC大橙</h4>
-                                <h4 class="subheading">安排整体商业计划</h4>
+                                <h4>关一涵</h4>
+                                <h4 class="subheading">市场</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">郑州大学信息工程学院20级本科生</p></div>
                             <div class="timeline-body"><p class="text-muted">QQ：1504679737</p></div>
@@ -230,8 +230,8 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/4.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>大国宫酱</h4>
-                                <h4 class="subheading">负责审核与商业计划</h4>
+                                <h4>韩家豪</h4>
+                                <h4 class="subheading">财务</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">郑州大学信息工程学院19级本科生</p></div>
                             <div class="timeline-body"><p class="text-muted">QQ:1207108678</p></div>
@@ -241,10 +241,10 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/5.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>克莱因蓝</h4>
-                                <h4 class="subheading">销售总监</h4>
+                                <h4>黄淼</h4>
+                                <h4 class="subheading">开发</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">郑州大学商学院19级本科生</p></div>
+                            <div class="timeline-body"><p class="text-muted">郑州大学电子信息工程19级本科生</p></div>
                             <div class="timeline-body"><p class="text-muted">QQ:543589111</p></div>
                         </div>
                     </li>
@@ -252,10 +252,10 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>落宇</h4>
-                                <h4 class="subheading">产品质检总监</h4>
+                                <h4>戚建宇</h4>
+                                <h4 class="subheading">开发</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">郑州大学力学与安全工程19级本科生</p></div>
+                            <div class="timeline-body"><p class="text-muted">郑州大学计科19级本科生</p></div>
                             <div class="timeline-body"><p class="text-muted">QQ：1097954991</p></div>
                             <div class="timeline-body"><p class="text-muted">邮箱：zhx_2514@126.com</p></div>
                             <div class="timeline-body"><p class="text-muted"></p></div>
@@ -265,10 +265,10 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>可爱小学妹</h4>
-                                <h4 class="subheading">网页设计</h4>
+                                <h4>郭庚鑫</h4>
+                                <h4 class="subheading">开发</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">郑州大学物理学院19级本科生</p></div>
+                            <div class="timeline-body"><p class="text-muted">郑州大学软工19级本科生</p></div>
                             <div class="timeline-body"><p class="text-muted">QQ：1765003792</p></div>
                             <div class="timeline-body"><p class="text-muted">微信：woshihuangmiao</p></div>
                             <div class="timeline-body"><p class="text-muted">欢迎添加我的QQ咨询相关内容</p></div>
@@ -278,10 +278,10 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4></h4>
-                                <h4 class="subheading">产品工程师</h4>
+                                <h4>祝如芳</h4>
+                                <h4 class="subheading">质控</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">郑州大学信息工程学院19级本科生</p></div>
+                            <div class="timeline-body"><p class="text-muted">郑州大学计科19级本科生</p></div>
                             <div class="timeline-body"><p class="text-muted">QQ：1097954991</p></div>
                             <div class="timeline-body"><p class="text-muted">邮箱：zhx_2514@126.com</p></div>
                             <div class="timeline-body"><p class="text-muted"></p></div>
@@ -389,8 +389,8 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">树莓派 4B主板</h2>
-                                    <p class="item-intro text-muted">Raspberrypi 4B</p>
+                                    <h2 class="text-uppercase">STM32F407ZGT6</h2>
+                                    <p class="item-intro text-muted">STM32F407ZGT6</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1.jpg" alt="..." />
                                     <p>Raspberry Pi(中文名为“树莓派”,简写为RPi，(或者RasPi / RPI) 是为学生计算机编程教育而设
                                         计，只有信用卡大小的微型电脑，其系统基于Linux。 随着Windows 10 IoT的发布，我们也将可以
