--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">STM32F407ZGT6开发板</div>
-                                <div class="portfolio-caption-subheading text-muted">STM32</div>
+                                <div class="portfolio-caption-subheading text-muted">STM32F407ZGT6 development board</div>
                             </div>
                         </div>
                     </div>
@@ -114,7 +114,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">AS608指纹识别模块</div>
-                                <div class="portfolio-caption-subheading text-muted">AS608</div>
+                                <div class="portfolio-caption-subheading text-muted">AS608 fingerprint recognition module</div>
                             </div>
                         </div>
                     </div>
@@ -129,7 +129,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">HC-06蓝牙模块</div>
-                                <div class="portfolio-caption-subheading text-muted">Identity</div>
+                                <div class="portfolio-caption-subheading text-muted">HC-06 Bluetooth module</div>
                             </div>
                         </div>
                     </div>
@@ -144,7 +144,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">矩阵按键模块</div>
-                                <div class="portfolio-caption-subheading text-muted">Branding</div>
+                                <div class="portfolio-caption-subheading text-muted">Matrix key module</div>
                             </div>
                         </div>
                     </div>
@@ -159,7 +159,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">OLED显示模块</div>
-                                <div class="portfolio-caption-subheading text-muted">Website Design</div>
+                                <div class="portfolio-caption-subheading text-muted">OLED display module</div>
                             </div>
                         </div>
                     </div>
@@ -174,7 +174,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">步进电机驱动模块</div>
-                                <div class="portfolio-caption-subheading text-muted">Photography</div>
+                                <div class="portfolio-caption-subheading text-muted">Stepper motor drive module</div>
                             </div>
                         </div>
                     </div>
@@ -196,10 +196,7 @@
                                 <h4>宫厚超</h4>
                                 <h4 class="subheading">经理</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">郑州大学信息工程学院19级本科生</p></div>
-                            <div class="timeline-body"><p class="text-muted">QQ：1765003792</p></div>
-                            <div class="timeline-body"><p class="text-muted">微信：woshihuangmiao</p></div>
-                            <div class="timeline-body"><p class="text-muted">欢迎添加我的QQ咨询相关内容</p></div>
+                            <div class="timeline-body"><p class="text-muted">郑州大学通信工程19级本科生</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -209,10 +206,7 @@
                                 <h4>闫子君</h4>
                                 <h4 class="subheading">文秘</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">郑州大学信息工程学院19级本科生</p></div>
-                            <div class="timeline-body"><p class="text-muted">QQ：1097954991</p></div>
-                            <div class="timeline-body"><p class="text-muted">邮箱：zhx_2514@126.com</p></div>
-                            <div class="timeline-body"><p class="text-muted"></p></div>
+                            <div class="timeline-body"><p class="text-muted">郑州大学电子信息工程19级本科生</p></div>
                         </div>
                     </li>
                     <li>
@@ -222,8 +216,7 @@
                                 <h4>关一涵</h4>
                                 <h4 class="subheading">市场</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">郑州大学信息工程学院20级本科生</p></div>
-                            <div class="timeline-body"><p class="text-muted">QQ：1504679737</p></div>
+                            <div class="timeline-body"><p class="text-muted">郑州大学计科19级本科生</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -233,8 +226,7 @@
                                 <h4>韩家豪</h4>
                                 <h4 class="subheading">财务</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">郑州大学信息工程学院19级本科生</p></div>
-                            <div class="timeline-body"><p class="text-muted">QQ:1207108678</p></div>
+                            <div class="timeline-body"><p class="text-muted">郑州大学软工19级本科生</p></div>
                         </div>
                     </li>
                     <li>
@@ -245,7 +237,6 @@
                                 <h4 class="subheading">开发</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">郑州大学电子信息工程19级本科生</p></div>
-                            <div class="timeline-body"><p class="text-muted">QQ:543589111</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -256,9 +247,6 @@
                                 <h4 class="subheading">开发</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">郑州大学计科19级本科生</p></div>
-                            <div class="timeline-body"><p class="text-muted">QQ：1097954991</p></div>
-                            <div class="timeline-body"><p class="text-muted">邮箱：zhx_2514@126.com</p></div>
-                            <div class="timeline-body"><p class="text-muted"></p></div>
                         </div>
                     </li>
                      <li>
@@ -269,9 +257,6 @@
                                 <h4 class="subheading">开发</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">郑州大学软工19级本科生</p></div>
-                            <div class="timeline-body"><p class="text-muted">QQ：1765003792</p></div>
-                            <div class="timeline-body"><p class="text-muted">微信：woshihuangmiao</p></div>
-                            <div class="timeline-body"><p class="text-muted">欢迎添加我的QQ咨询相关内容</p></div>
                         </div>
                     </li>
                        <li class="timeline-inverted">
@@ -282,9 +267,6 @@
                                 <h4 class="subheading">质控</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">郑州大学计科19级本科生</p></div>
-                            <div class="timeline-body"><p class="text-muted">QQ：1097954991</p></div>
-                            <div class="timeline-body"><p class="text-muted">邮箱：zhx_2514@126.com</p></div>
-                            <div class="timeline-body"><p class="text-muted"></p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -305,8 +287,8 @@
         <section class="page-section bg-light" id="team">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">我们的追求</h2>
-                    <h3 class="section-subheading text-muted">The Way Of Study</h3>
+                    <h2 class="section-heading text-uppercase">团队方向</h2>
+                    <h3 class="section-subheading text-muted">The Way Of Team</h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4">
@@ -392,20 +374,9 @@
                                     <h2 class="text-uppercase">STM32F407ZGT6</h2>
                                     <p class="item-intro text-muted">STM32F407ZGT6</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1.jpg" alt="..." />
-                                    <p>Raspberry Pi(中文名为“树莓派”,简写为RPi，(或者RasPi / RPI) 是为学生计算机编程教育而设
-                                        计，只有信用卡大小的微型电脑，其系统基于Linux。 随着Windows 10 IoT的发布，我们也将可以
-                                        用上运行Windows的树莓派。自问世以来，受众多计算机发烧友和创客的追捧，曾经一“派”难求。别
-                                        看其外表“娇小”，内“心”却很强大，视频、音频等功能通通皆有，可谓是“麻雀虽小，五脏俱全”。</p>
-                                    <ul class="list-inline">
-                                        <li>
-                                            <strong>Client:</strong>
-                                            Threads
-                                        </li>
-                                        <li>
-                                            <strong>Category:</strong>
-                                            Illustration
-                                        </li>
-                                    </ul>
+                                    <p>较之STM32F1/F2 等Cortex-M3产品，STM32F4 最大的优势，就是新增了硬件 FPU 单元以及 DSP 指令，同
+                                        时， STM32F4 的主频也提高了很多，达到 168Mhz（可获得 210DMIPS 的处理能力），这使得 STM32F4 尤
+                                        其适用于需要浮点运算或 DSP 处理的应用，也被称之为： DSC， 具有非常广泛的应用前景。</p>               
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-times me-1"></i>
                                         Close Project
