--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <h2 class="section-heading text-uppercase">产品相关</h2>
                     <h3 class="section-subheading text-muted">Something About Our Products</h3>
                 </div>
-                <img src="assets/img/portfolio/7.jpg" alt="open">
+                <img src="assets/img/portfolio/7.jpg" alt="open" width="100" height="50">
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 mb-4">
                         <!-- Portfolio item 1-->
