--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
                     <h2 class="section-heading text-uppercase">产品相关</h2>
                     <h3 class="section-subheading text-muted">Something About Our Products</h3>
                 </div>
-                <img src="assets/img/portfolio/7.jpg" alt="open" width="100" height="50">
+                <div class="portfolio-caption-heading">开锁示意图</div>
+                <p style="text-align: center;">
+                <img src="assets/img/portfolio/7.jpg" alt="open" width="250" height="150">
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 mb-4">
                         <!-- Portfolio item 1-->
